--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>My live video</title>
+<title>HLS stream inspector</title>
   <link href="https://unpkg.com/video.js/dist/video-js.css" rel="stylesheet">
 </head>
 <body>
-  <h1>My live video - simple HLS player</h1>
-
   <video-js id="video_id" class="vjs-default-skin" controls preload="auto" width="640" height="360">
     <source src="/playlist.m3u8" type="application/x-mpegURL">
   </video-js>
@@ -16,6 +14,5 @@
   <script>
     var player = videojs('video_id');
   </script>
-  
 </body>
 </html>
